syntax = "proto3";
package common;

option go_package = "./proto";

enum IncrementDecrement {
  INCREMENT = 0;
  DECREMENT = 1;
}