syntax = "proto3";
package modules;

option go_package = "./proto";

import "proto/common.proto";

message LetterChange {
  int32 letter_index = 1;
  common.IncrementDecrement direction = 2;
}

message PasswordSubmit {}

message PasswordInput {
  oneof input {
    LetterChange letter_change = 1;
    PasswordSubmit submit = 2;
  }  
}

message PasswordInputResult {
  PasswordState password_state = 1;
}

message PasswordState {
  // Contains the current letters in order
  string letters = 1;
}
